# oea-rekep-real-plugin

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  PhyAgentOS_plugin.toml  README.md  README_zh.md  oea_plugin.toml  pyproject.toml
oea_rekep_real_plugin/: __init__.py
phyagentos_rekep_real_plugin/: __init__.py  driver.py
phyagentos_rekep_real_plugin/profiles/: rekep_real.md
runtime/: README.md  camera_factory.py  dobot_bridge.py  franky_adapter.py  orbbec_camera_v6.py  real_solver_rekep.py  real_task_planner.py  robot_factory.py
runtime/docs/: robot_adaptation.md  robot_adaptation_zh.md
runtime/real_calibration/: eval_orbbec_v1.py  orbbec_settings.ini
runtime/real_calibration/orbbec_config/: camera_intrinsics_depth_scales.json  orbbec_calibration.json  orbbec_calibration_template.json
runtime/vlm_query/: prompt_template.txt
scripts/: scan_secrets.sh
tests/: test_rekep_real_driver.py  test_rekep_robot_factory.py
