[project]
name = "oea-rekep-real-plugin"
version = "0.1.0"
description = "External ReKep real-robot plugin for OpenEmbodiedAgent"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenEmbodiedAgent contributors"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=9.0.0,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oea_rekep_real_plugin"]

[tool.hatch.build]
include = [
    "oea_rekep_real_plugin/**/*.py",
    "oea_rekep_real_plugin/profiles/**/*.md",
    "runtime/**/*",
    "tests/**/*",
    "README.md",
    "LICENSE",
    "oea_plugin.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
