[project]
name = "phyagentos-rekep-real-plugin"
version = "0.1.0"
description = "External ReKep real-robot plugin for PhyAgentOS"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PhyAgentOS contributors"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=9.0.0,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phyagentos_rekep_real_plugin"]

[tool.hatch.build]
include = [
    "phyagentos_rekep_real_plugin/**/*.py",
    "phyagentos_rekep_real_plugin/profiles/**/*.md",
    "runtime/**/*",
    "tests/**/*",
    "README.md",
    "README_zh.md",
    "LICENSE",
    "PhyAgentOS_plugin.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
